[package]
name = "aldoc"
version = "0.1.4"
edition = "2018"
authors = ["sinono3 <aldoacevedo1993@gmail.com>"]
description = "CLI and library for parsing and compiling Aldoc documents"

license = "Apache-2.0"
keywords = ["typesetting", "markup", "markdown", "latex"]
categories = ["command-line-utilities", "parser-implementations", "encoding", "template-engine"]
repository = "https://github.com/Sinono3/aldoc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
numerals = "0.1"
tectonic = "0.1.15"

thiserror = "1.0"
clap = "3.0.0-beta.1"
